--- a/src/Components/EmployeeCard/EmployeeCard.css
+++ b/src/Components/EmployeeCard/EmployeeCard.css
@@ -11,6 +11,7 @@
 
 .employee-card:hover {
     box-shadow: 0px 0px 15px rgba(255, 0, 0, 0.308);
+    cursor: default;
 }
 
 .employee-photo {
@@ -20,5 +21,16 @@
 }
 
 .employee-data {
+    text-align: left;
+    padding-left: 10px;
+    padding-top: 5px;
+    font-size: 12px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+#name {
+    font-size: 16px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+
