--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -41,3 +41,10 @@ h2 {
 #emp-button:hover {
     background-color: brown;
 }
+
+.video-container {
+    margin: 20px 0;
+    padding: 20px 0;
+    width: 100%;
+    background: linear-gradient(90deg, rgba(221,221,221,1) 0%, rgba(0,0,0,1) 5%, rgba(0,0,0,1) 95%, rgba(221,221,221,1) 100%);
+}
