--- a/src/Components/EmployeeCard/EmployeeCard.css
+++ b/src/Components/EmployeeCard/EmployeeCard.css
@@ -2,16 +2,23 @@
     background-color: rgb(255, 255, 255);
     border-radius: 15px;
     box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.25s;
+    transition: all 0.25s ease-out;
     margin: 5px;
     list-style-type: none;
     height: 220px;
     width: 150px;
+    position: relative;
+    left: 0px;
+    top: 0px;
+    filter: grayscale(70%);
 }
 
 .employee-card:hover {
-    box-shadow: 0px 0px 15px rgba(255, 0, 0, 0.308);
+    box-shadow: 3px 3px 7px rgba(163, 0, 0, 0.39);
     cursor: default;
+    left: -3px;
+    top: -3px;
+    filter: grayscale(0%);
 }
 
 .employee-photo {
