--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -14,7 +14,7 @@ h2 {
 .cards-container {
     display: flex;
     flex-wrap: wrap;
-    height: 230px;
+    max-height: 230px;
     overflow-y: hidden;
     justify-content: center;
     gap: 25px;
@@ -22,7 +22,7 @@ h2 {
 
 .overflow {
     overflow-y: visible;
-    height: fit-content;
+    max-height: fit-content;
     transition: 1s ease-out;
 }
 
