--- a/src/Components/Content/Content.css
+++ b/src/Components/Content/Content.css
@@ -6,6 +6,20 @@
     text-justify: distribute;
 }
 
+/*.empleados-flex {
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: auto;
+    justify-content: center;
+}*/
+
+.box-container {
+    background-color: white;
+    border-radius: 15px;
+    margin: 5px 15px;
+    padding: 10px 5px;
+}
+
 .title {
     text-align: left;
     padding-left: 25px;
@@ -37,13 +51,6 @@ button {
 
 button:hover {
     background-color: brown;
-}
-
-.box-container {
-    background-color: white;
-    border-radius: 15px;
-    margin: 5px 15px;
-    padding: 10px 0;
 }
 
 .video-container {
